
* The command 'display_drafts' has been discontinued. INCOMPATIBILITY,
use action "isabelle.draft" (or "print") in Isabelle/jEdit instead.

* Isabelle symbol "\<hyphen>" is rendered as explicit Unicode hyphen U+2010, to
avoid unclear meaning of the old "soft hyphen" U+00AD. Rare
INCOMPATIBILITY, e.g. copy-paste of historic Isabelle HTML output.


*** Isabelle/jEdit Prover IDE ***

* System options "spell_checker_include" and "spell_checker_exclude"
supersede former "spell_checker_elements" to determine regions of text
that are subject to spell-checking. Minor INCOMPATIBILITY.

* PIDE markup for session ROOT files: allows to complete session names,
follow links to theories and document files etc.

* Completion supports theory header imports, using theory base name.
E.g. "Prob" may be completed to "HOL-Probability.Probability".

* The command-line tool "isabelle jedit" provides more flexible options
for session selection:
  - options -P opens the parent session image of -l
  - options -A and -B modify the meaning of -l to produce a base
    image on the spot, based on the specified ancestor (or parent)
  - option -F focuses on the specified logic session
  - option -R has changed: it only opens the session ROOT entry
  - option -S sets up the development environment to edit the
    specified session: it abbreviates -B -F -R -l

  Examples:
    isabelle jedit -d '$AFP' -S Formal_SSA -A HOL
    isabelle jedit -d '$AFP' -S Formal_SSA -A HOL-Analysis

* Named control symbols (without special Unicode rendering) are shown as
bold-italic keyword. This is particularly useful for the short form of
antiquotations with control symbol: \<^name>\<open>argument\<close>. The action
"isabelle.antiquoted_cartouche" turns an antiquotation with 0 or 1
arguments into this format.

* Completion provides templates for named symbols with arguments,
e.g. "\<comment> \<open>ARGUMENT\<close>" or "\<^emph>\<open>ARGUMENT\<close>".

* Bibtex database files (.bib) are semantically checked.
