@@ -310,6 +310,5 @@ view.height=787
 view.middleMousePaste=true
 view.showToolbar=true
 view.thickCaret=true
-view.title=Isabelle/jEdit -\u0020
 view.width=1072
 xml-insert-closing-tag.shortcut=
